--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "axios": "^1.7.2",
     "json-server": "^0.17.4",
     "json-server-auth": "^2.1.0",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
